feat: add direct bubble selection